--- a/src/pages/faq.scss
+++ b/src/pages/faq.scss
@@ -69,6 +69,10 @@
     .wtf-block__steps {
       justify-content: center;
     }
+    .faq__back {
+      margin-left: 0;
+      margin-top: 30px;
+    }
     .step-card {
       cursor: pointer;
       margin: 10px;
