--- a/src/pages/rilesSlides.scss
+++ b/src/pages/rilesSlides.scss
@@ -89,14 +89,14 @@
   width: 495px;
 
   .rules-slide__img-container {
-    background: #dadada;
+    // background: #dadada;
     // height: 566px;\
     height: 100%;
     border-radius: 10px;
     display: flex;
     align-items: center;
 
-    video {
+    img {
       height: 100%;
       width: 100%;
       margin: auto;
