--- a/src/components/TestSlide/testslide.scss
+++ b/src/components/TestSlide/testslide.scss
@@ -39,6 +39,10 @@
       font-size: 35px;
       line-height: 34px;
     }
+    @media screen and (max-width: 1100px) {
+      font-size: 25px;
+      line-height: 30px;
+    }
   }
   .test-slide__progress {
     width: calc(100% + 1px);
@@ -119,6 +123,9 @@
           // font-size: 13px;
           height: 35px;
         }
+        @media screen and (max-width: 1100px) {
+          height: 30px;
+        }
       }
     }
     .test-slide__price {
@@ -170,10 +177,10 @@
     padding: 20px 15px 25px 15px;
     .test-slide__brand-logo {
       position: absolute;
-      height: 77px;
+      height: 65px;
       right: -20px;
       top: -32px;
-      width: 77px;
+      width: 65px;
       img {
         height: auto;
       }
