--- a/src/components/LK/LKContent/lkcontent.scss
+++ b/src/components/LK/LKContent/lkcontent.scss
@@ -17,6 +17,7 @@
   }
   @media screen and (max-width: 1508px) {
     margin-left: 70px;
+    margin-top: 0;
     width: 630px;
     .lk-content__block {
       padding: 35px 45px 33px 45px;
