--- a/src/components/TestSlide/testslide.scss
+++ b/src/components/TestSlide/testslide.scss
@@ -84,7 +84,9 @@
       right: -10px;
       // box-shadow: 0px 13px 13px rgb(0 0 0 / 25%)
     }
-
+    @media screen and (max-width: 1280px) {
+      height: 40px;
+    }
     @media screen and (max-width: 767px) {
       height: 20px;
       bottom: -1px;
@@ -104,7 +106,7 @@
     line-height: 37px;
     letter-spacing: 0.475706px;
     color: rgba(255, 255, 255, 0.9);
-    margin-bottom: 20px;
+    margin-bottom: 7px;
 
     & > div {
       display: flex;
@@ -124,7 +126,7 @@
           height: 35px;
         }
         @media screen and (max-width: 1100px) {
-          height: 30px;
+          height: 25px;
         }
       }
     }
@@ -169,6 +171,12 @@
     }
   }
 
+  @media screen and (max-width: 1280px) {
+    // padding: 20px 15px 25px 15px;
+    padding-bottom: 50px;
+    padding-top: 40px;
+  }
+
   @media screen and (max-width: 767px) {
     width: 100%;
     min-width: 158px;
@@ -209,7 +217,7 @@
       align-items: center;
       .test-slide__price {
         margin-left: 0;
-        margin-top: 10px;
+        // margin-top: 10px;
       }
     }
   }
