--- a/src/pages/test.scss
+++ b/src/pages/test.scss
@@ -35,7 +35,7 @@
   .archive-background {
     // display: none;
     position: absolute;
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 1280px) {
       display: block;
     }
   }
@@ -136,12 +136,16 @@
   @media screen and (max-width: 1350px) {
     max-width: 1200px;
   }
-  @media screen and (max-width: 1230px) {
-    max-width: 1100px;
-  }
-  @media screen and (max-width: 767px) {
+
+  @media screen and (max-width: 1280) {
     display: none;
   }
+  // @media screen and (max-width: 1230px) {
+  //   max-width: 1100px;
+  // }
+  // @media screen and (max-width: 767px) {
+  //   display: none;
+  // }
 }
 
 .arrow-info {
@@ -236,8 +240,20 @@
       margin-top: 20px;
     }
   }
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1280px) {
     display: flex;
+    .add-page__alien {
+      width: 120px;
+      height: 127px;
+      position: relative;
+      z-index: 3;
+      img {
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+    }
   }
 }
 
