--- a/src/pages/transfer.scss
+++ b/src/pages/transfer.scss
@@ -13,6 +13,9 @@
       .donate-block__select-card li {
         width: 70px;
         height: 50px;
+        &:nth-child(3) {
+          background-size: 50%;
+        }
       }
     }
   }
