--- a/src/components/TestSlide/testslide.scss
+++ b/src/components/TestSlide/testslide.scss
@@ -17,8 +17,13 @@
     right: -7%;
     height: 50%;
     transition: 1s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 170px;
+    max-height: 170px;
     img {
-      height: 100%;
+      max-height: 100%;
       @media screen and (max-width: 1586px) {
         // height: 177%;
       }
@@ -189,8 +194,11 @@
       right: -20px;
       top: -32px;
       width: 65px;
+      // display: flex;
+      // align-items: center;
+      // justify-content: center;
       img {
-        height: auto;
+        max-height: 100%;
       }
     }
     .test-slide__name {
