--- a/src/pages/test.scss
+++ b/src/pages/test.scss
@@ -14,6 +14,11 @@
       margin-bottom: 70px;
     }
   }
+  .test-solo-slide {
+    width: 360px;
+    height: 360px;
+    margin: auto;
+  }
   .helped-container {
     height: 100vh;
     width: 100%;
@@ -246,6 +251,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    width: 100%;
     @media screen and (min-width: 570px) {
       justify-content: space-evenly;
     }
