--- a/src/pages/faq.scss
+++ b/src/pages/faq.scss
@@ -198,6 +198,13 @@
         @media screen and (max-width: 1350px) {
           font-size: 26px;
         }
+        @media screen and (max-width: 1150px) {
+          font-size: 24px;
+        }
+        @media screen and (max-width: 920px) {
+          font-size: 22px;
+          line-height: 30px;
+        }
         @media screen and (max-width: 768px) {
           font-size: 17px;
           line-height: 35px;
