--- a/src/pages/questions.scss
+++ b/src/pages/questions.scss
@@ -741,14 +741,24 @@
   }
   .questions__descr {
     font-weight: normal;
-    font-size: 28px;
+    font-size: 26px;
     line-height: 121%;
     text-align: center;
     max-width: 500px;
     color: #ffffff;
     min-height: 108px;
     margin-bottom: 11vh;
+    @media screen and (max-height: 1200px) {
+      font-size: 24px;
+    }
+    @media screen and (max-height: 1000px) {
+      font-size: 22px;
+    }
+    @media screen and (max-height: 920px) {
+      font-size: 20px;
+    }
     @media screen and (max-height: 820px) {
+      font-size: 19px;
       // margin-bottom: 150px;
     }
     @media screen and (max-width: 767px) {
