--- a/src/pages/login.scss
+++ b/src/pages/login.scss
@@ -12,6 +12,7 @@
     cursor: pointer;
     width: 140px;
     display: block;
+    text-align: center;
     &:hover {
       color: #17ca9b;
     }
