--- a/src/components/LK/LKContent/lkcontent.scss
+++ b/src/components/LK/LKContent/lkcontent.scss
@@ -1,5 +1,5 @@
 .lk-content {
-  margin-top: 19px;
+  margin-top: 8px;
   width: 725px;
   margin-left: 121px;
   position: relative;
@@ -17,7 +17,7 @@
   }
   @media screen and (max-width: 1508px) {
     margin-left: 70px;
-    margin-top: 0;
+    // margin-top: 0;
     width: 630px;
     .lk-content__block {
       padding: 35px 45px 33px 45px;
@@ -35,6 +35,7 @@
     width: 100%;
     position: absolute;
     margin: 0 20px;
+    margin-top: 8px;
     border-radius: 0;
     min-height: calc(100vh - 67px);
     height: 100%;
