--- a/src/pages/brand.scss
+++ b/src/pages/brand.scss
@@ -35,6 +35,12 @@
         right: -106px;
       }
     }
+    @media screen and (max-width: 1084px) {
+      padding-top: 15px;
+      .archive-background__item_4 {
+        left: -175px;
+      }
+    }
   }
 }
 .brand-page__content {
@@ -238,6 +244,11 @@
       font-size: 18px;
     }
   }
+  @media screen and (max-width: 1000px) {
+    h2 {
+      display: none;
+    }
+  }
 }
 
 .brand-page__btn {
@@ -280,7 +291,10 @@
   z-index: 1;
   display: none;
   @media screen and (max-width: 1000px) {
-    margin-top: 5vh;
+    h2 {
+      display: none;
+    }
+    margin-top: 3vh;
     display: block;
     .brand-page__row {
       margin-bottom: 1px;
@@ -350,12 +364,12 @@
     display: none;
   }
   .slick-prev {
-    left: -70px;
+    left: -62px;
   }
   .slick-next {
-    right: -70px;
+    right: -62px;
 
-    transform: rotate(180deg) translateY(27px);
+    transform: rotate(180deg);
   }
   .slick-next,
   .slick-prev {
