--- a/src/pages/test.scss
+++ b/src/pages/test.scss
@@ -268,10 +268,13 @@
   .brands-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    // justify-content: space-between;
+    justify-content: space-evenly;
     width: 100%;
     @media screen and (min-width: 570px) {
-      justify-content: space-evenly;
+    }
+    @media screen and (max-width: 767px) {
+      padding-top: 30px;
     }
   }
   .brands-list__item {
